PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/VariableExistsCoCo.par
VariableExistsCoCo {
var Int test = 0
seq main() : Void {
    test = 2
}
}