PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/IndexAccessListExistsCoCo.par
IndexAccessListExistsCoCo {
    var Int test = 1
seq main() : Void {
    test[0] = 2
}
}